# rental-prediction-service

./: Makefile  README.md  config.yaml  pyproject.toml
.github/actions/build-application/: action.yaml
.github/workflows/: lint.yaml
artifacts/: model.pkl
notebooks/: rental-prediction-service.ipynb
src/: app.py  config.py  data.py  database.py  inference.py  logger.py  model.py  model_builder.py  model_inference.py  model_service.py  run_model_builder.py  run_model_inference.py
